# Real_time_data_Analysis_PA

./: CMakeLists.txt  JETSON_RUN_README.md  README.md  package.xml  task_rviz_setting.rviz
bags/: metadata.yaml
include/cartographer_parallel/: assignment.h  fast_matcher.h  score_all_backends.h
launch/: cartographer_parallel_with_bag.launch  cartographer_parallel_with_bag.launch.py  fast_correlative.launch  fast_correlative.launch.py
maps/: 0501.pgm  0501.yaml
results/: README.md  final_experiment_summary_README.md  module_improvement_README.md  perf_analysis_summary.csv  perf_analysis_table.md  perf_runs.csv  perf_runs_all.csv
results/all_tests/: .~lock.perf_analysis_summary.csv#  perf_analysis_summary.csv  perf_analysis_table.md  status.tsv
results/block_ablation_pinned/: block_ablation_summary.csv  block_ablation_table.md  perf_analysis_summary.csv  perf_analysis_table.md  perf_runs.csv  status.tsv
results/isolated_modules/: README.md  block_ablation_summary.csv  block_ablation_table.md  perf_analysis_summary.csv  perf_analysis_table.md  perf_runs.csv  status.tsv
scripts/: check_student02_perf_csv.sh  perf_analyze.py  perf_summary_to_csv.py  run_student02_perf_csv.sh
src/: fast_correlative_node.cpp  fast_matcher.cpp  score_all_base.cpp  score_all_cpu_baseline.cpp  score_all_cpu_omp.cpp  score_all_cpu_opt.cpp  score_all_cpu_opt_bounds.cpp  score_all_cpu_opt_offsets.cpp  score_all_cpu_opt_omp.cpp  score_all_cpu_parallel.cpp  score_all_cuda_stubs.cpp  score_all_dispatch.cpp  score_all_gpu_block_cached_map_shared.cu  score_all_gpu_block_cached_map_shared_pinned.cu  score_all_gpu_block_cached_map_shared_pruned.cu  score_all_gpu_block_cached_map_shared_reuse.cu  score_all_gpu_block_per_candidate.cu  score_all_gpu_thread_cached_map.cu  score_all_gpu_thread_per_candidate.cu  score_all_gpu_thread_pruned.cu
